After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 709306 - gnome-software crashes when installing an application
gnome-software crashes when installing an application
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
3.10.x
Other Linux
: Normal major
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-10-02 19:10 UTC by Ryan Lerch
Modified: 2013-10-07 10:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Don't emit notify::state from a thread (2.32 KB, patch)
2013-10-06 17:32 UTC, Matthias Clasen
committed Details | Review
Fix a refcounting error (1.18 KB, patch)
2013-10-06 17:32 UTC, Matthias Clasen
committed Details | Review

Description Ryan Lerch 2013-10-02 19:10:28 UTC
Several fedora users seem to be encountering the same bug (according to ABRT approx 40 people have encountered this bug) with gnome-software.

I have encountered this bug with version gnome-software-3.10.0-1.fc20 in fedora 20 alpha.

my steps to reproduce were:

1. open gnome software.
2. click on "getting things gnome" from the picks.
3. click on the blue install button in the top right.
4. gnome-software crashes


The truncated backtrace from the original reporter was:
"""
Truncated backtrace:
Thread no. 1 (10 frames)
 #0 _gtk_css_computed_values_get_intrinsic_value at gtkcsscomputedvalues.c:242
 #1 _gtk_css_computed_values_get_value at gtkcsscomputedvalues.c:229
 #2 gtk_css_computed_values_create_css_animations at gtkcsscomputedvalues.c:456
 #3 _gtk_css_computed_values_create_animations at gtkcsscomputedvalues.c:524
 #4 _gtk_style_context_validate at gtkstylecontext.c:3290
 #8 gtk_container_idle_sizer at gtkcontainer.c:1680
 #9 _g_closure_invoke_va at gclosure.c:840
 #11 g_signal_emit_by_name at gsignal.c:3426
 #12 gdk_frame_clock_paint_idle at gdkframeclockidle.c:408
 #18 g_main_context_iteration at gmain.c:3773
"""

further details and tracebacks are available here:
https://retrace.fedoraproject.org/faf/reports/223289/
and here:
https://bugzilla.redhat.com/show_bug.cgi?id=1012253
Comment 1 Matthias Clasen 2013-10-06 17:32:50 UTC
Created attachment 256581 [details] [review]
Don't emit notify::state from a thread

The ui code assumes that it can do GTK+ calls in response to
this signal, so you can't just emit it from the worker thread
and expect things to work.
Comment 2 Matthias Clasen 2013-10-06 17:32:58 UTC
Created attachment 256582 [details] [review]
Fix a refcounting error

pending_apps has g_object_unref as free func, which means
g_ptr_array_remove will drop a reference. That won't end well
unless you take a reference when adding apps to the array.
Comment 3 Matthias Clasen 2013-10-06 17:33:34 UTC
Here are two fixes; I'm still seeing issues after these, but they look pretty obviously like a step in the right direction to me.
Comment 4 Matthias Clasen 2013-10-07 10:34:19 UTC
Attachment 256581 [details] pushed as 30cf04a - Don't emit notify::state from a thread
Attachment 256582 [details] pushed as 71e1e85 - Fix a refcounting error