Don't emit notify::state from a thread

The ui code assumes that it can do GTK+ calls in response to
this signal, so you can't just emit it from the worker thread
and expect things to work.

https://bugzilla.gnome.org/show_bug.cgi?id=709306